--- a/metamask.html
+++ b/metamask.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Web3 Metamask Login</title>
+  <title>Login</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
