--- a/@/ar.html
+++ b/@/ar.html
@@ -23,7 +23,8 @@
             value: Matvey's NFT"
 			></a-entity>
 		</a-marker>
-		<a-entity camera></a-entity>
+		<a-entity camera>
+</a-entity>
 	</a-scene>
 </body>
 </html>
