--- a/@/ar.html
+++ b/@/ar.html
@@ -20,8 +20,7 @@
             align: center; width: 10;
             color: #2AA29F;
             font: roboto;         
-            value: Matvey's NFT"
-			></a-entity>
+            value: Matvey's NFT"></a-entity>
 		</a-marker>
 		<a-entity camera>
 </a-entity>
