--- a/@/ar1.html
+++ b/@/ar1.html
@@ -5,6 +5,7 @@
  <body>
   <a-scene embedded arjs>
     <a-marker url="https://raw.githubusercontent.com/CEPBEP/test/master/a1.jpg?token=GHSAT0AAAAAABQPQ3FCZAGDJSEEHM6LR2JIYO6CVEQ">
+    <a-marker type ="pattern" url ="pattern-a1.patt">
       <a-entity 
          position="0 -3 0"
          rotation="-60 0 0"
