--- a/@/ar1.html
+++ b/@/ar1.html
@@ -7,7 +7,7 @@
 
   <a-scene embedded arjs>
    <!--<a-marker url="https://raw.githubusercontent.com/CEPBEP/test/master/a1.jpg?token=GHSAT0AAAAAABQPQ3FCZAGDJSEEHM6LR2JIYO6CVEQ">-->
-    <a-marker type ="pattern" url ="pattern-a1.patt">
+    <a-marker type ="pattern" url ="https://cepbep.github.io/@/pattern-a1.patt">
       <a-entity 
          position="0 -3 0"
          rotation="-60 0 0"
