--- a/@/ar/1.html
+++ b/@/ar/1.html
@@ -34,7 +34,7 @@
   >
     <a-nft
       type="nft"
-      url="./me"
+      url="./a"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
