--- a/@/ar/1.html
+++ b/@/ar/1.html
@@ -32,7 +32,7 @@
   >
     <a-nft
       type="nft"
-      url="./a"
+      url="/a"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
