--- a/@/ar/1.html
+++ b/@/ar/1.html
@@ -31,7 +31,7 @@
   >
     <a-nft
       type="nft"
-      url="/a"
+      url="/a1"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
