--- a/@/ar/1.html
+++ b/@/ar/1.html
@@ -33,7 +33,7 @@
   >
     <a-nft
       type="nft"
-      url="/a1"
+      url="./a1"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
