--- a/metamask.html
+++ b/metamask.html
@@ -3,6 +3,13 @@
 <head>
   <title>Login</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    p#userWallet{
+    position: absolute;padding:8px;top:5px;left:10px;
+    font-weight:900;background-color:#8b5cf6;
+    color: white;border-radius:8px;opacity:0;
+    animation: ani 5s forwards;}
+  </style>
 </head>
 
 <body class="flex w-screen h-screen justify-center items-center">
