--- a/metamask.html
+++ b/metamask.html
@@ -9,6 +9,11 @@
     font-weight:900;background-color:#8b5cf6;
     color: white;border-radius:8px;opacity:0;
     animation: ani 5s forwards;}
+    @keyframes ani {
+    0% {opacity: 0;}
+   30% {opacity: 0;}
+  100% {opacity: 1;}
+                   }
   </style>
 </head>
 
