--- a/metamask.html
+++ b/metamask.html
@@ -21,10 +21,7 @@
   <center>
     <div class="flex-col space-y-2 justify-center items-center">
       <button id='loginButton' onclick="" class="mx-auto rounded-md p-2 bg-purple-500 text-white" style="
-    position: absolute;
-    top: 11px;
-    right: 15px;
-">
+    position:absolute;top:11px;font-weight:900;right:15px;">
       войти
     </button>
     <p id='userWallet' class='text-lg text-gray-600 my-2'></p>
