--- a/231/index.html
+++ b/231/index.html
@@ -15,13 +15,16 @@
     </head>
     <body>
     
+<center>
   
-    <img src="img/1.jpg" style="width:56%;position:absolute;left:21.5%;top:0%;padding:14px;border-radius:55px;">
-    <img src="img/2.jpg" style="width:56%;position:absolute;left:21.5%;top: 77%;padding:14px;border-radius:55px;">
-    <img src="img/3.jpg" style="width:56%;position:absolute;left:21.5%;top: 149%;padding:14px;border-radius:55px;">
-    <img src="img/4.jpg" style="width:56%;position:absolute;left:21.5%;top: 212%;padding:14px;border-radius:55px;">
-    <img src="img/5.jpg" style="width:56%;position:absolute;left:21.5%;top: 270%;padding:14px;border-radius:55px;">
+    <img src="img/1.jpg" style="width:100%;">
+    <img src="img/2.jpg" style="width:100%;">
+    <img src="img/3.jpg" style="width:100%;">
+    <img src="img/4.jpg" style="width:100%;">
+    <img src="img/5.jpg" style="width:100%;">
     
+</center>
+
     </body>
 
 </html>
