--- a/231/index.html
+++ b/231/index.html
@@ -21,6 +21,7 @@
     <img src="img/2.jpg" style="width:100%;">
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
+    <img src="img/6.jpg" style="width:100%;">
     <img src="img/4.jpg" style="width:100%;">
     
 </center>
