--- a/231/index.html
+++ b/231/index.html
@@ -14,8 +14,11 @@
     </style>
     </head>
     <body>
-    Указ Президента Российской Федерации от 10.10.2019 г. № 490 <br>
-    Указ Президента Российской Федерации от 25.04.2022 № 231    <br>
+
+    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> <br>
+        
+    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span>    <br>
+
 <center>
   
     <img src="img/1.jpg" style="width:100%;">
