--- a/231/index.html
+++ b/231/index.html
@@ -5,8 +5,11 @@
     <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
     <style>
     body {
-        font-family: 'CocoBikeR';
-        background-color: #100900;
+    font-family: 'CocoBikeR';
+    background-color: #100900;
+    color: gold;
+    font-size: 3em;
+    text-align: center;
          }
          ::-webkit-scrollbar {
   width: 0;
