--- a/231/index.html
+++ b/231/index.html
@@ -18,9 +18,9 @@
     </head>
     <body>
 
-    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> <br>
+    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> о ИИ  <br>
                                                                                                                    <br>
-    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span>    <br>
+    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке    <br>
 
 <center>
   
