--- a/231/index.html
+++ b/231/index.html
@@ -17,20 +17,20 @@
     </style>
     </head>
     <body>
-                                                                                                                         <br>
-    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> о ИИ  <br>
-                                                                                                                         <br>
-    Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке  <br>
+                                                                                                                       <br>
+    <a href="http://kremlin.ru/acts/bank/44731" target="blank" style="text-decoration:unset;color:unset;">
+Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> о ИИ</a><br>
+                                                                                                                       <br>
+    <a href="http://static.kremlin.ru/media/events/files/ru/WiWS6wA3UWh0h5dWnOndvYMgdY7pJIkA.pdf" target="blank" style="text-decoration:unset;color:unset;">
+Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке</a><br>
 
 <center>
-  
     <img src="img/1.jpg" style="width:100%;">
     <img src="img/2.jpg" style="width:100%;">
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
     <img src="img/6.jpg" style="width:100%;">
     <img src="img/4.jpg" style="width:100%;">
-    
 </center>
 
     </body>
