--- a/231/index.html
+++ b/231/index.html
@@ -33,6 +33,8 @@
     <img src="img/4.jpg" style="width:100%;">
 </center>
 
+        <span>проведение соревнований и турниров</span>
+
     </body>
 
 </html>
