--- a/231/index.html
+++ b/231/index.html
@@ -26,6 +26,9 @@
                                                                                                                        <br>
 <center>
     <img src="img/1.jpg" style="width:100%;">
+
+<span>Для игр, обучения, проведения соревнований, турниров и развлечения</span>
+
     <img src="img/2.jpg" style="width:100%;">
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
@@ -33,7 +36,7 @@
     <img src="img/4.jpg" style="width:100%;">
 </center>
       <br> <br>
-        <span>проведение соревнований и турниров</span>
+        
 
     </body>
 
