--- a/231/index.html
+++ b/231/index.html
@@ -23,11 +23,15 @@
                                                                                                                        <br>
     <a href="http://static.kremlin.ru/media/events/files/ru/WiWS6wA3UWh0h5dWnOndvYMgdY7pJIkA.pdf" target="blank" style="text-decoration:unset;color:unset;">
 Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке</a><br>
+
+        <span>Использование только отечественных продуктов</span>
                                                                                                                        <br>
 <center>
     <img src="img/1.jpg" style="width:100%;">
 
-    <span>Для игр, обучения, проведения соревнований, турниров и развлечения</span>
+    <span>
+
+Для игр, обучения, проведения соревнований, турниров и развлечения</span>
 
     <img src="img/2.jpg" style="width:100%;">
     <img src="img/3.jpg" style="width:100%;">
