--- a/231/index.html
+++ b/231/index.html
@@ -24,7 +24,7 @@
     <a href="http://static.kremlin.ru/media/events/files/ru/WiWS6wA3UWh0h5dWnOndvYMgdY7pJIkA.pdf" target="blank" style="text-decoration:unset;color:unset;">
 Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке</a><br>
                                                                                                                        <br>
-        <span>Использование только отечественных продуктов</span>
+        <span>Обеспечение технологической независимиости РФ</span>
                                                                                                                        <br>
 <center>
     <img src="img/1.jpg" style="width:100%;">
