--- a/231/index.html
+++ b/231/index.html
@@ -36,7 +36,7 @@
     <img src="img/2.jpg" style="width:100%;">
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
-<span>Развитие Российского рынка</span>
+<span>Развитие Российского тенхологического рынка</span>
     <img src="img/6.jpg" style="width:100%;">
     <img src="img/4.jpg" style="width:100%;">
 </center>
