--- a/231/index.html
+++ b/231/index.html
@@ -14,6 +14,10 @@
          ::-webkit-scrollbar {
   width: 0;
          }
+iframe {
+    width: 100%;
+    height: 100vh;
+}
     </style>
     </head>
     <body>
@@ -41,15 +45,15 @@
     <img src="img/6.jpg" style="width:100%;">
     <img src="img/4.jpg" style="width:100%;">
 </center>
-     <iframe  style="width:100%"src="https://www.youtube.com/embed/O50Ajot1MdU"></iframe>
+     <iframe src="https://www.youtube.com/embed/O50Ajot1MdU"></iframe>
 
-     <iframe  style="width:100%"src="https://www.youtube.com/embed/1YlNj1DlNtw"></iframe>
+     <iframe src="https://www.youtube.com/embed/1YlNj1DlNtw"></iframe>
 
-     <iframe  style="width:100%"src="https://www.youtube.com/embed/BIPj7DgIYVc"></iframe>
+     <iframe src="https://www.youtube.com/embed/BIPj7DgIYVc"></iframe>
 
-     <iframe  style="width:100%"src="https://www.youtube.com/embed/Jn6O1QQjH3Y"></iframe>
+     <iframe src="https://www.youtube.com/embed/Jn6O1QQjH3Y"></iframe>
 
-     <iframe  style="width:100%"src="https://www.youtube.com/embed/aqV6CjV1Yc0"></iframe>
+     <iframe src="https://www.youtube.com/embed/aqV6CjV1Yc0"></iframe>
         
 
     </body>
