--- a/231/index.html
+++ b/231/index.html
@@ -45,15 +45,8 @@ iframe {
     <img src="img/6.jpg" style="width:100%;">
     <img src="img/4.jpg" style="width:100%;">
 </center>
-     <iframe src="https://www.youtube.com/embed/O50Ajot1MdU"></iframe>
-
-     <iframe src="https://www.youtube.com/embed/1YlNj1DlNtw"></iframe>
-
-     <iframe src="https://www.youtube.com/embed/BIPj7DgIYVc"></iframe>
-
-     <iframe src="https://www.youtube.com/embed/Jn6O1QQjH3Y"></iframe>
-
-     <iframe src="https://www.youtube.com/embed/aqV6CjV1Yc0"></iframe>
+<br><br>
+        <a href="video.html"> Смотреть </a>
         
 
     </body>
