--- a/231/index.html
+++ b/231/index.html
@@ -46,7 +46,7 @@ iframe {
     <img src="img/4.jpg" style="width:100%;">
 </center>
 <br><br>
-        <a href="video.html"> Смотреть </a>
+        <a style="text-decoration:unset;color:unset;font-size:3em;" href="video.html"> Смотреть </a>
         
 
     </body>
