--- a/231/index.html
+++ b/231/index.html
@@ -23,13 +23,13 @@ iframe {
     <body>
                                                                                                                        <br>
     <a href="http://kremlin.ru/acts/bank/44731" target="blank" style="text-decoration:unset;color:unset;">
-Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 г. № 490</span> о ИИ</a><br>
+Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">10.10.2019 № 490</span> о ИИ</a><br>
                                                                                                                        <br>
     <a href="http://static.kremlin.ru/media/events/files/ru/WiWS6wA3UWh0h5dWnOndvYMgdY7pJIkA.pdf" target="blank" style="text-decoration:unset;color:unset;">
 Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке</a><br>
                                                                                                                        <br>
-    <a href="http://publication.pravo.gov.ru/Document/View/0001202203300001" target="blank" style="text-decoration:unset;color:unset;">
-            Обеспечение технологической независимиости РФ</a>
+    <a href="http://kremlin.ru/acts/bank/47688" target="blank" style="text-decoration:unset;color:unset;">
+            Обеспечение технологической независимиости РФ от <span style="font-family:'Megrim',cursive;">30.03.2022 № 166</span></a>
                                                                                                                        <br>
 <center>
     <img src="img/1.jpg" style="width:100%;">
