--- a/231/video.html
+++ b/231/video.html
@@ -32,6 +32,10 @@ iframe {
      <iframe src="https://www.youtube.com/embed/aqV6CjV1Yc0"></iframe>
 
      <iframe src="https://www.youtube.com/embed/EqgpmSxsq8E"></iframe>
+
+     <iframe src="https://www.youtube.com/embed/uwmVoZ40SI0"></iframe>
+
+     <iframe src="https://www.youtube.com/embed/adSl89IBCRA"></iframe>
         
 
     </body>
