--- a/231/index.html
+++ b/231/index.html
@@ -35,11 +35,12 @@ iframe {
 <center>
     <img src="img/1.jpg" style="width:100%;">
 
-    <span>
-
-Для игр, обучения, проведения соревнований, турниров и развлечения</span>
+    <span>Для игр, обучения, проведения соревнований, турниров и развлечения</span>
 
     <img src="img/2.jpg" style="width:100%;">
+
+    <span>Стол, два ПК, VR, лабораторные инструменты с реактивами,установка для выращивания с растворами, мелкие животные и растения.</span>
+
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
     <span style="font-size: 3em;">Развитие Российского тенхологического рынка</span>
