--- a/231/index.html
+++ b/231/index.html
@@ -39,7 +39,7 @@ iframe {
 
     <img src="img/2.jpg" style="width:100%;">
 
-    <span>Стол, два ПК, VR, лабораторные инструменты с реактивами,установка для выращивания с растворами, мелкие животные и растения.</span>
+    <span>Лабораторный стол, два ПК, VR, лабораторные инструменты с реактивами,установка для выращивания с растворами, мелкие животные и растения.</span>
 
     <img src="img/3.jpg" style="width:100%;">
     <img src="img/5.jpg" style="width:100%;">
