--- a/231/index.html
+++ b/231/index.html
@@ -28,6 +28,11 @@ iframe {
     <a href="http://static.kremlin.ru/media/events/files/ru/WiWS6wA3UWh0h5dWnOndvYMgdY7pJIkA.pdf" target="blank" style="text-decoration:unset;color:unset;">
 Указ Президента Российской Федерации от <span style="font-family:'Megrim',cursive;">25.04.2022 № 231</span> о науке</a><br>
                                                                                                                        <br>
+<a href="http://www.kremlin.ru/acts/news/68322" target="blank" style="text-decoration:unset;color:unset;">
+            О мерах по обеспечению информационной
+безопасности  от <span style="font-family:'Megrim',cursive;">01.05.2022 № 250</span></a>
+                                                                                                                       <br>
+                                                                                                                       <br>
     <a href="http://kremlin.ru/acts/bank/47688" target="blank" style="text-decoration:unset;color:unset;">
             Обеспечение технологической независимиости РФ от <span style="font-family:'Megrim',cursive;">30.03.2022 № 166</span></a>
                                                                                                                        <br>
