--- a/231/index.html
+++ b/231/index.html
@@ -50,7 +50,9 @@ iframe {
     <img src="img/5.jpg" style="width:100%;">
     <span style="font-size: 3em;">Развитие Российского тенхологического рынка</span>
     <img src="img/6.jpg" style="width:100%;">
+    <a href="hhttps://reestr.digital.gov.ru/reestr/326766/" target="blank" style="text-decoration:unset;color:unset;">
     <img src="img/4.jpg" style="width:100%;">
+    </a>
 </center>
 <br><br>
         <a style="text-decoration:unset;color:unset;font-size:3em;" href="video.html"> Смотреть </a>
