--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -157,8 +157,9 @@
     color: blue;
 ">calculateHash</span><span style="
     color: orange;
-">()</span>						             
-        {
+">()</span><span style="
+    color: orange;
+">{</span>
         return Encrypt.SHA256(this.index + this.previousHash + this.timeStamp + this.data + this.nonce).toString();
         }        
         mineBlock(difficulty)                                                                                                         
