--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -152,7 +152,9 @@
           <span style="
     color: violet;
 ">this</span>.nonce = 0;                                                                                                   
-        }      
+        <span style="
+    color: orange;
+		     ">}</span>     
         <span style="
     color: blue;
 ">calculateHash</span><span style="
