--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -159,7 +159,8 @@
     color: blue;
 ">calculateHash</span><span style="
     color: orange;
-">()</span><span style="
+">()</span>
+<span style="
     color: orange;
 ">{</span>
         return Encrypt.SHA256(this.index + this.previousHash + this.timeStamp + this.data + this.nonce).toString();
