--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <center>
-    <img class="mg" src="m.png" style="width: 100%;translate: none;rotate: none;scale: none;transform: translate(0px, -600px);position: absolute;left: 0;">
+    <img class="mg" src="media/img/m.png" style="width: 100%;translate: none;rotate: none;scale: none;transform: translate(0px, -600px);position: absolute;left: 0;">
   </center>
 
 
