--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js'></script>
 <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
 <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
-<script src='https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js'></script><script  src="script.js"></script>
+<script src='https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js'></script><script  src="@/script.js"></script>
 
 </body>
 </html>
