--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <center>
-<img src="
+    <img class="im" src="
           https://sun9-80.userapi.com/impg/TEiuCJCGfqhHdPkIKAc8wGLV-rN120RbiV4-9Q/WYSI5tJUB7Q.jpg?size=781x807&amp;quality=95&amp;sign=8dfa492eb61fe0cd6b96db881828b78d&amp;type=album
          " style="
   width: 20%;translate: none;rotate: none;scale: none;transform: translate(0px, 200px);position: absolute;right: 0px;border-radius: 20px 0px 0px 20px;
