--- a/ip/index.html
+++ b/ip/index.html
@@ -7,7 +7,8 @@
 <script>
 fetch('https://ipapi.co/json/')
   .then(d => d.json())
-  //.then(d => document.querySelector('#ip').innerHTML = d.ip);
-  .then(d => document.querySelector('#ip').innerHTML = d.json);
+  .then(d => document.querySelector('#ip').innerHTML = d.ip)
+  .then(d => document.querySelector('#network').innerHTML = d.network);
 </script>
 <div id="ip"></div>
+<div id="network"></div>
