--- a/DatApp/index.html
+++ b/DatApp/index.html
@@ -1,3 +1,28 @@
+
+
+
+<style>
+.one {
+    background-image: url(4.jpg);
+    background-size: contain;
+    width: 50%;
+    height: 50%;
+     }
+.two {
+   background-image: url(2.jpg);
+    background-size: contain;
+    width: 50%;
+    height: 50%;
+     }
+  .three {
+     background-image: url(2.jpg);
+    background-size: contain;
+    width: 50%;
+    height: 50%;
+  }
+
+</style>
+
 <div class="one"> </div>
 
 <div class="two"> </div>
