--- a/DatApp/index.html
+++ b/DatApp/index.html
@@ -5,18 +5,21 @@
 .one {
     background-image: url(4.jpg);
     background-size: contain;
+    background-repeat: no-repeat;
     width: 50%;
-    height: 50%;
+    height: 74%;
      }
 .two {
    background-image: url(2.jpg);
     background-size: contain;
+    background-repeat: no-repeat;
     width: 50%;
     height: 50%;
      }
   .three {
      background-image: url(2.jpg);
     background-size: contain;
+    background-repeat: no-repeat;
     width: 50%;
     height: 50%;
   }
