--- a/DatApp/index.html
+++ b/DatApp/index.html
@@ -32,6 +32,12 @@
 
 <div class="two"> </div>
 
-<div class="three"> </div>
+<div class="three">
+    <!-- Простой пример с видео -->
+<video src="1.mp4" autoplay >
+
+</video>
+
+ </div>
 
 </center>
