--- a/DatApp/index.html
+++ b/DatApp/index.html
@@ -22,10 +22,10 @@
     height: 50%;
      }
   .three {
-     background-image: url(2.jpg);
+  /*background-image: url(2.jpg);*/
     background-size: contain;
     background-repeat: no-repeat;
-    width: 50%;
+    width: 100%;
     height: 50%;
   }
 
