--- a/DatApp/index.html
+++ b/DatApp/index.html
@@ -43,8 +43,8 @@
 
 <div class="three">
     <!-- Простой пример с видео -->
-<video autoplay loop muted>
-  <source src="1.mp4" type="video/mp4" />
+<video autoplay="" loop="" muted="" style="width: 50%;">
+  <source src="1.mp4" type="video/mp4">
 </video>
 
  </div>
