--- a/travel/index.html
+++ b/travel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> >_ </title>
+    <title>Анкета</title>
     <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
