--- a/travel/index.html
+++ b/travel/index.html
@@ -100,7 +100,7 @@ margin: 1px;
           </div>
 
           <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;">
-       Jamaica и так далее
+       Jamaica, Maldives и так далее
                    </h3>
           <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
        Нажмите тут, чтобы скинуть титьки, вареник и оставить заявку
