--- a/ascii/index.html
+++ b/ascii/index.html
@@ -6,7 +6,7 @@
     https://cdn.jsdelivr.net/npm/asciinema-player@3.7.0/dist/bundle/asciinema-player.min.css
     " rel="stylesheet">
 </head>
-<body>
+<body style="margin:0;">
   <div id="player"></div>
   <script src="
   https://cdn.jsdelivr.net/npm/asciinema-player@3.7.0/dist/bundle/asciinema-player.min.js
