--- a/ascii/index.html
+++ b/ascii/index.html
@@ -26,6 +26,16 @@
       { cols: 125, rows: 39 }
     );
   </script>
+
+
+  <div id="players"></div>
+  <script>
+   AsciinemaPlayer.create(
+        '/assets/566887.cast',
+      document.getElementById('players'),
+      { cols: 125, rows: 39 }
+    );
+  </script>
     
 </body>
 </html>
