--- a/random/index.html
+++ b/random/index.html
@@ -1,7 +1,16 @@
 
+<center>
+   <h1>  
+    <a href="https://replicate.com/explore"/> 
+      replicate.com
+   </a>
+  </h1>
 
- <h1>  
-  <a href="https://replicate.com/explore"/> 
-      https://replicate.com/explore
-  </a>
- </h1>
+<br>
+
+  <h1>
+   <a href="https://cosmos.network/"/> 
+      https://replicate.com
+    </a>
+  </h1>
+</center>
