--- a/random/index.html
+++ b/random/index.html
@@ -6,11 +6,19 @@
    </a>
   </h1>
 
-<br>
+ <br>
 
   <h1>
    <a href="https://cosmos.network/"/> 
-      https://replicate.com
+      cosmos.network
+    </a>
+  </h1>
+
+ <br>
+
+  <h1>
+   <a href="https://wandb.ai"/> 
+      wandb.ai
     </a>
   </h1>
 </center>
