--- a/dart.html
+++ b/dart.html
@@ -1,10 +1,10 @@
-
-
-
-
-
-
-
-
+   <html>
+  <head>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+ </head>
+ <body style="text-align: center;overflow:hidden;">
 
 <iframe src="https://dartpad.dev/?id=5c0e154dd50af4a9ac856908061291bc?theme=light"></iframe>
+ </body>
+   </html>
