--- a/BrainWaves/index.html
+++ b/BrainWaves/index.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
-<!--
-/*
- * Copyright (C) 2010-2012, 2015 <>< Charles Lohr
- *    Based off of http://www.khronos.org/webgl/wiki/Tutorial
- *
- * Portions of code:
- *    Copyright (C) 2009 Apple Inc. All Rights Reserved.
- *                  2010 Charles Lohr (Fix Lookat function)
- *
- */
- -->
+
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -271,7 +261,7 @@ function pointerlock( lock, element )
 
 
 	<div STYLE="position:fixed;bottom:1px;left:10px;color:#ffffff;text-shadow: 1px 1px #000000;">
-		<A HREF=https://github.com/cnlohr/voxeltastic>Voxeltastic on github</A> Confused? <A HREF=https://www.youtube.com/watch?v=aqqEYz38ens>Here's a video explaining what's going on.</A> Or you can <a href=# onclick="document.getElementById('popover').style.display='block';">Load your own file</a>.
+		  <a href=# onclick="document.getElementById('popover').style.display='block';">Load your converted to hippa radio waves as a file</a>.
 	</div>
 
 	<canvas id="example" WIDTH="100%">Upgrade your browser, it does not support canvas.
