--- a/BrainWaves/index.html
+++ b/BrainWaves/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Voxeltastic - Volume Raytracing</title>
+<title>Визуализатор Сигнала</title>
 
 <script src="J3DIMath.js" type="text/javascript"> </script>
 <script src="CNWebGL.js" > </script>
