--- a/BrainWaves/index.html
+++ b/BrainWaves/index.html
@@ -233,8 +233,8 @@ function pointerlock( lock, element )
 <DIV id=te STYLE="position:fixed;top:0px;left:0px;">
 	<div id=tray STYLE="position:fixed;top:1px;left:10px;color:#ffffff;text-shadow: 1px 1px #000000;">
 		<div id="buttons">
-			<INPUT TYPE=SUBMIT onclick="goFullScreen( document.getElementById('te') );" name=fsbtn VALUE="Go Fullscreen">
-			<INPUT TYPE=SUBMIT onclick="pointerlock( !ispointerlocked, document.getElementById('example') );" name=ptrlok VALUE="Pointer Lock">
+			<INPUT TYPE=SUBMIT onclick="goFullScreen( document.getElementById('te') );" name=fsbtn VALUE="На весь экран">
+			<INPUT TYPE=SUBMIT onclick="pointerlock( !ispointerlocked, document.getElementById('example') );" name=ptrlok VALUE="Блок курсора">
 			<div id="framerate" STYLE="position:fixed;top:0px;right:3px;"></DIV>
 			<INPUT id="status" TYPE=hidden>
 		</div>
