--- a/BrainWaves/index.html
+++ b/BrainWaves/index.html
@@ -261,7 +261,8 @@ function pointerlock( lock, element )
 
 
 	<div STYLE="position:fixed;bottom:1px;left:10px;color:#ffffff;text-shadow: 1px 1px #000000;">
-		  <a href=# onclick="document.getElementById('popover').style.display='block';">Load your converted to hippa radio waves as a file</a>.
+		  <a href=# onclick="document.getElementById('popover').style.display='block';">Load your converted to hippa radio waves as a file <br> Загрузите преобразованные в Hippa радиоволны в виде файла.
+</a>.
 	</div>
 
 	<canvas id="example" WIDTH="100%">Upgrade your browser, it does not support canvas.
