--- a/vscode/index.html
+++ b/vscode/index.html
@@ -1,1 +1,7 @@
-<iframe src="https://vscode.dev/" frameborder="0"></iframe>
+<html>
+   <head>
+    </head>
+      <body style="margin: 0;">
+        <iframe id="frame" src="https://stackblitz.com/edit/angular?embed=1"></iframe>
+    </body>
+</html>
