--- a/vscode/index.html
+++ b/vscode/index.html
@@ -2,6 +2,6 @@
    <head>
     </head>
       <body style="margin: 0;">
-        <iframe id="frame" src="https://stackblitz.com/edit/angular?embed=1"></iframe>
+        <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&file=README.md"></iframe>
     </body>
 </html>
