--- a/vscode/index.html
+++ b/vscode/index.html
@@ -2,6 +2,6 @@
    <head>
     </head>
       <body style="margin: 0;">
-        <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&file=README.md"></iframe>
+        <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&amp;file=README.md" style="width: 100%;height: 100vh;"></iframe>
     </body>
 </html>
