--- a/vscode/index.html
+++ b/vscode/index.html
@@ -1,5 +1,7 @@
 <html>
    <head>
+ <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}
+     </style>
     </head>
       <body style="margin: 0;">
         <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&amp;file=README.md" style="width: 100%;height: 100vh;"></iframe>
