--- a/code/frame.html
+++ b/code/frame.html
@@ -4,6 +4,6 @@
         </style>
            </head>
              <body style="margin: 0;">
-        <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&amp;file=index.html" style="width: 100%;height: 97vh;"></iframe>
+        <iframe id="frame" src="https://stackblitz.com/edit/stackblitz-webcontainer-api-starter-a3xreq?embed=1&amp;file=file.js" style="width: 100%;height: 97vh;"></iframe>
     </body>
 </html>
