--- a/JARVIS/index.html
+++ b/JARVIS/index.html
@@ -1,3 +1,16 @@
-<script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/3.24.1/gradio.js"></script>
+<html class="">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+		<meta name="description" content="explore artificial general intelligence (AGI)" />
+		<meta property="fb:app_id" content="1321688464574422" />
+		<meta name="twitter:card" content="https://metaprotocol.github.io/media/0.jpg" />
+		<meta name="twitter:site" content="@huggingface" />
+		<meta property="og:title" content="JARVIS INTERFACE" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://huggingface.co/spaces/microsoft/HuggingGPT" />
+		<meta property="og:image" content="https://metaprotocol.github.io/media/0.jpg" />
 
+
+<script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/3.24.1/gradio.js"></script>
 <gradio-app src="https://microsoft-hugginggpt.hf.space"></gradio-app>
