--- a/JARVIS/index.html
+++ b/JARVIS/index.html
@@ -10,6 +10,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://huggingface.co/spaces/microsoft/HuggingGPT" />
 		<meta property="og:image" content="https://metaprotocol.github.io/media/0.jpg" />
-<center><img src="https://metaprotocol.github.io/media/j.png"/></center>
-<script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/3.24.1/gradio.js"></script>
+           <style>::-webkit-scrollbar{width:0px;}</style>
+       <center><img src="https://metaprotocol.github.io/media/j.png"/></center>
+   <script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/3.24.1/gradio.js"></script>
 <gradio-app src="https://microsoft-hugginggpt.hf.space"></gradio-app>
