--- a/$/index.html
+++ b/$/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <iframe src="map.html" style="border: 0;width: 100%;height: 100vh;position: absolute;z-index: -1;opacity.9"></iframe>
+    <iframe src="map.html" style="border: 0;width: 100%;height: 100vh;position: absolute;z-index: -1;opacity:.9;"></iframe>
 
 
     <div class="container">
