--- a/travel/index.html
+++ b/travel/index.html
@@ -17,6 +17,7 @@ margin: 1px;
       }
      </style>
 	  <!-- Chatra {literal} -->
+<!--
 <script>
     (function(d, w, c) {
         w.ChatraID = 'C2t8Mb2LPj9d8drFL';
@@ -29,6 +30,7 @@ margin: 1px;
         if (d.head) d.head.appendChild(s);
     })(document, window, 'Chatra');
 </script>
+-->
 <!-- /Chatra {/literal} -->
     </head>
   <body style="margin:0;">
@@ -102,9 +104,9 @@ margin: 1px;
           <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;">
        Jamaica, Maldives и так далее
                    </h3>
-          <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
+         <!-- <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
        Нажмите тут, чтобы скинуть титьки, вареник и оставить заявку
-                   </h3>
+                   </h3> -->
 
 	   </center>
   </body>
