--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -1,3 +1,8 @@
+<html>
+
+<head>
+
+</head>
 |
 |
 |
@@ -15,3 +20,6 @@
 |
 --------
 <script src="https://w.tb.ru/open-messenger/widget?wId=W-B559B447E6804AC5A67B41C4D5389C1B"></script>
+</body>
+
+</html>
