--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -3,6 +3,9 @@
 <head>
 
 </head>
+<body>
+
+<pre>
 |
 |
 |
@@ -19,6 +22,66 @@
 |
 |
 --------
+ДОГОВОР ОФЕРТЫ
+на оказание услуг по оптовым поставкам товаров
+
+Город Москва «___» ___________ 2024 года
+
+1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ
+1.1. В настоящем Договоре следующие термины имеют следующие значения:
+
+Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе.
+Заказчик — юридическое лицо или индивидуальный предприниматель, которому предлагаются услуги по оптовым поставкам товаров.
+Исполнитель — организация, осуществляющая оптовые поставки товаров по данному договору.
+Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте.
+Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.
+2. ПРЕДМЕТ ДОГОВОРА
+2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора.
+2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.
+2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.
+
+3. ПРАВА И ОБЯЗАННОСТИ СТОРОН
+3.1. Обязанности Исполнителя:
+
+3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.
+3.1.2. Предоставлять Заказчику всю необходимую информацию, касающуюся поставляемых товаров, включая документы, сертификаты и иные сопроводительные материалы.
+3.1.3. Обеспечить качество товаров, соответствующее нормам и стандартам.
+3.2. Обязанности Заказчика:
+3.2.1. Оплатить стоимость услуг по поставке товаров в сроки и на условиях, предусмотренных договором.
+3.2.2. Принять товары в месте и в сроки, указанные в условиях договора.
+3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.
+4. СТОИМОСТЬ УСЛУГ И ПОРЯДОК ОПЛАТЫ
+4.1. Стоимость услуг по оптовым поставкам товаров определяется на основании цен, согласованных сторонами в отдельном заказе или контракте.
+4.2. Оплата услуг осуществляется Заказчиком на условиях 100% предоплаты или по графику, согласованному сторонами.
+4.3. Все платежи по данному договору осуществляются в рублях Российской Федерации на счет Исполнителя, указанный в счетах или инвойсах.
+
+5. СРОКИ И УСЛОВИЯ ПОСТАВОК
+5.1. Сроки поставки товаров определяются в каждом случае индивидуально и согласовываются сторонами в заказах или контрактах.
+5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.
+
+6. ОТВЕТСТВЕННОСТЬ СТОРОН
+6.1. В случае неисполнения или ненадлежащего исполнения обязательств по настоящему договору, виновная сторона несет ответственность в соответствии с законодательством Российской Федерации.
+6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.
+6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.
+
+7. ФОРС-МАЖОР
+7.1. Стороны освобождаются от ответственности за неисполнение обязательств по настоящему договору в случае наступления форс-мажорных обстоятельств, таких как: стихийные бедствия, войны, забастовки, акты государственной власти и другие обстоятельства, которые не могли быть предусмотрены или предотвращены стороной.
+7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.
+
+8. СОГЛАШЕНИЕ О ПЕРСОНАЛЬНЫХ ДАННЫХ
+8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.
+
+9. ПРОЧИЕ УСЛОВИЯ
+9.1. Все изменения и дополнения к настоящему договору оформляются в письменной форме и являются неотъемлемой частью договора.
+9.2. В случае возникновения споров, стороны будут стремиться к их разрешению путем переговоров. В случае невозможности решения спора путем переговоров, спор передается на рассмотрение в арбитражный суд по месту нахождения Исполнителя.
+
+10. ПРИЛОЖЕНИЯ
+10.1. Приложения к настоящему договору являются его неотъемлемой частью.
+
+11. ПОДПИСАНИЕ СТОРОН
+11.1. Подписанием данного договора одна сторона делает предложение, а другая сторона принимает его в установленном порядке, что влечет за собой заключение договора.
+
+</pre>
 <script src="https://w.tb.ru/open-messenger/widget?wId=W-B559B447E6804AC5A67B41C4D5389C1B"></script>
 </body>
 
