--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -25,7 +25,7 @@
 ДОГОВОР ОФЕРТЫ
 на оказание услуг по оптовым поставкам товаров
 
-Город Москва «___» ___________ 2024 года
+Город Москва «<span id="day"></span>» <span id="month"></span> 2024 года
 
 1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ
 1.1. В настоящем Договоре следующие термины имеют следующие значения:
