--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -1,11 +1,14 @@
 <html>
 
 <head>
+<script>
+let now = new Date();
 
+<script>
 </head>
 <body>
 
-<pre>
+
 |
 |
 |
@@ -22,10 +25,12 @@
 |
 |
 --------
+
+<div>
 ДОГОВОР ОФЕРТЫ
 на оказание услуг по оптовым поставкам товаров
 
-Город Москва «<span id="day"></span>» <span id="month"></span> 2024 года
+Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года
 
 1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ
 1.1. В настоящем Договоре следующие термины имеют следующие значения:
@@ -81,7 +86,7 @@
 11. ПОДПИСАНИЕ СТОРОН
 11.1. Подписанием данного договора одна сторона делает предложение, а другая сторона принимает его в установленном порядке, что влечет за собой заключение договора.
 
-</pre>
+</div>
 <script src="https://w.tb.ru/open-messenger/widget?wId=W-B559B447E6804AC5A67B41C4D5389C1B"></script>
 </body>
 
