--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -29,21 +29,21 @@ tme.innerHTML += timeStr;
 --------
 
 <div>
-ДОГОВОР ОФЕРТЫ
-на оказание услуг по оптовым поставкам товаров
+ДОГОВОР ОФЕРТЫ <br>
+на оказание услуг по оптовым поставкам товаров <br>
 
-Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года
+Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
 
-1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ
-1.1. В настоящем Договоре следующие термины имеют следующие значения:
+1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ <br>
+1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
 
-Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе.
-Заказчик — юридическое лицо или индивидуальный предприниматель, которому предлагаются услуги по оптовым поставкам товаров.
-Исполнитель — организация, осуществляющая оптовые поставки товаров по данному договору.
-Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте.
-Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.
-2. ПРЕДМЕТ ДОГОВОРА
-2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора.
+Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе. <br>
+Заказчик — юридическое лицо или индивидуальный предприниматель, которому предлагаются услуги по оптовым поставкам товаров. <br>
+Исполнитель — организация, осуществляющая оптовые поставки товаров по данному договору. <br>
+Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте. <br>
+Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.  <br><br>
+2. ПРЕДМЕТ ДОГОВОРА <br>
+2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
 2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.
 2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.
 
